"Fixed" the sidebar to the viewport

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,11 @@ body,
 
 .app {
   display: flex;
-  position: relative;
+  overflow-y: hidden
+}
+
+.content {
+  overflow-y: auto;
 }
 
 ::-webkit-scrollbar {
